--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bulma": "^0.7.5",
     "bulma-extensions": "^6.2.7",
     "bulma-helpers": "^0.3.8",
+    "bulma-steps": "^2.2.1",
     "bulma-timeline": "^3.0.4",
     "gh-pages": "^2.0.1",
     "imagemin-webpack-plugin": "^2.1.5",
